# FarmLinkAI

./: .gitignore  CHANGELOG.md  DEPLOYMENT_RENDER.md  README.md  SETUP_GUIDE.md  WARP.md  fix-image-urls.js  package-lock.json  package.json  server.js  test-frontend-api.js  test-order-notification.js  test-whatsapp-debug.js
ai-service/: Procfile  README.md  app.py  pyproject.toml  requirements.txt  setup.py
models/: Farmer.js  Product.js
public/js/: admin.js  marketplace.js
routes/: farmers.js  products.js  whatsapp.js
