[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "farmlink-ai-service"
dynamic = ["version"]
description = "AI Quality Grading Service for FarmLink AI"
authors = [
    {name = "FarmLink AI Team"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.2",
    "Pillow>=12.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.3",
    "gunicorn>=21.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0"
]

[tool.setuptools]
packages = ["ai_service"]

[tool.setuptools_scm]