[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.38.0"]
build-backend = "setuptools.build_meta"

[project]
name = "farmlink-ai-service"
version = "1.0.0"
description = "AI Quality Grading Service for FarmLink AI"
authors = [
    {name = "FarmLink AI Team"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.2",
    "Pillow>=12.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.3",
    "gunicorn>=21.2.0"
]